[gd_scene load_steps=7 format=3 uid="uid://dcj36edtxg3ck"]

[ext_resource type="Script" path="res://map/dungeon.gd" id="1_1hjgm"]
[ext_resource type="PackedScene" uid="uid://do78uiwbgckay" path="res://ui/pause_menu.tscn" id="2_img3q"]
[ext_resource type="Script" path="res://map/camera_2d.gd" id="3_0bf8r"]
[ext_resource type="PackedScene" uid="uid://db5fatnj0uwms" path="res://player/player.tscn" id="3_51vlb"]
[ext_resource type="PackedScene" uid="uid://byy8d84jgw0g" path="res://map/hub_world.tscn" id="5_dx0w7"]
[ext_resource type="PackedScene" uid="uid://doe0sstc3n5sh" path="res://ui/hud.tscn" id="7_wap1c"]

[node name="Dungeon" type="Node2D"]
process_mode = 1
script = ExtResource("1_1hjgm")

[node name="MinimapViewport" type="SubViewport" parent="."]
transparent_bg = true
canvas_cull_mask = 4294967293
size = Vector2i(160, 90)

[node name="MinimapCamera" type="Camera2D" parent="MinimapViewport"]
offset = Vector2(150, 60)
zoom = Vector2(0.1, 0.1)
script = ExtResource("3_0bf8r")

[node name="HUD" parent="." instance=ExtResource("7_wap1c")]

[node name="Generate Dungeon Test Button" type="Button" parent="HUD"]
visible = false
offset_left = 1167.0
offset_top = 653.0
offset_right = 1247.0
offset_bottom = 684.0
disabled = true
text = "Generate
"

[node name="PauseMenu" parent="." instance=ExtResource("2_img3q")]
visible = false

[node name="Spawn" type="Node2D" parent="."]

[node name="HubWorld" parent="Spawn" instance=ExtResource("5_dx0w7")]

[node name="Player" parent="." instance=ExtResource("3_51vlb")]

[node name="MainCamera" type="Camera2D" parent="Player"]
zoom = Vector2(2, 2)
position_smoothing_enabled = true
position_smoothing_speed = 10.0
script = ExtResource("3_0bf8r")

[connection signal="pressed" from="HUD/Generate Dungeon Test Button" to="." method="_on_button_pressed"]
[connection signal="game_exited_to_menu" from="PauseMenu" to="." method="_on_pause_menu_game_exited_to_menu"]
[connection signal="game_restarted" from="PauseMenu" to="." method="_on_pause_menu_game_restarted"]
